# skim

./: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PERFORMANCE_AUDIT.md  README.md  SECURITY.md  complex_example.ts
crates/rskim/: Cargo.toml  README.md
crates/rskim-bench/: Cargo.toml
crates/rskim-bench/src/: configs.rs  harness.rs  lib.rs  main.rs  metrics.rs  qrel.rs  report.rs  split.rs  tuning.rs  types.rs
crates/rskim-bench/src/cochange/: deny_list.rs  mod.rs  report.rs  temporal_split.rs  types.rs  validate.rs
crates/rskim-bench/src/extract/: go.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
crates/rskim-bench/tests/: cochange_validation.rs  integration.rs
crates/rskim-compress/: Cargo.toml  clippy.toml
crates/rskim-compress/benches/: engine_bench.rs
crates/rskim-compress/src/: lib.rs  log.rs  prefilter.rs  route.rs  zone.rs
crates/rskim-compress/src/engines/: code.rs  json.rs  log.rs  mixed.rs  mod.rs
crates/rskim-compress/tests/: conformance.rs  integration.rs
crates/rskim-contract/: Cargo.toml  clippy.toml
crates/rskim-contract/benches/: contract_throughput.rs  contract_throughput_bench.rs
crates/rskim-contract/src/: canonical.rs  contract.rs  error.rs  extension.rs  guardrail.rs  lib.rs  log.rs  request.rs  waiver.rs  zone.rs
crates/rskim-contract/src/harness/: corpus.rs  mod.rs  self_test.rs
crates/rskim-contract/tests/: ac2_compile_fail.rs  proptest_invariants.rs
crates/rskim-contract/tests/compile_fail/: a_error_return.rs  a_error_return.stderr  b_grow_bytes.rs  b_grow_bytes.stderr  c_reorder_turns.rs  c_reorder_turns.stderr  d_hot_zone_mutation.rs  d_hot_zone_mutation.stderr
crates/rskim-core/: Cargo.toml  README.md
crates/rskim-core/benches/: transform_bench.rs
crates/rskim-core/src/: ast_walk.rs  lib.rs  types.rs
crates/rskim-core/src/parser/: language.rs  mod.rs
crates/rskim-core/src/transform/: json.rs  minimal.rs  mod.rs  pseudo.rs  signatures.rs  structure.rs  toml.rs  truncate.rs  types.rs  utils.rs  yaml.rs
crates/rskim-core/tests/: csharp_transform.rs  integration.rs  kotlin_transform.rs  ruby_transform.rs  sql_spike.rs  sql_transform.rs  swift_transform.rs  tier2_comment_check.rs  tier2_spike.rs  tier2_spike_detailed.rs
crates/rskim-llm/: Cargo.toml  clippy.toml
crates/rskim-llm/benches/: parse_bench.rs
crates/rskim-llm/fuzz/: Cargo.toml
crates/rskim-llm/fuzz/fuzz_targets/: parse_fuzz.rs
crates/rskim-llm/src/: classify.rs  error.rs  ingest.rs  lib.rs  mutate.rs  parse.rs  provider.rs  serialize.rs  splice.rs
crates/rskim-llm/src/model/: anthropic.rs  mod.rs  openai.rs
crates/rskim-llm/tests/: chunk_ingestion.rs  classifier.rs  integration.rs  linearity.rs  mutation.rs  round_trip.rs
crates/rskim-proxy/: Cargo.toml
crates/rskim-proxy/benches/: proxy_latency_bench.rs
crates/rskim-proxy/src/: analytics.rs  authmode.rs  config.rs  detect.rs  errors.rs  forward.rs  health.rs  lib.rs  logging.rs  seam.rs  server.rs
crates/rskim-proxy/tests/: ac24_compile_fail.rs  block_router_e2e.rs  conformance_and_determinism.rs  detection_fixtures.rs  seam_integration.rs  wire_integration.rs
crates/rskim-proxy/tests/compile_fail/: ac24_auth_mode_exhaustive_match.rs  ac24_auth_mode_exhaustive_match.stderr  ac24_proxy_provider_exhaustive_match.rs  (+1 more)
crates/rskim-research/: Cargo.toml  ast-corpus.toml  cochange-corpus.toml  corpus.toml
crates/rskim-research/src/: ast_cmd.rs  ast_codegen.rs  ast_extract.rs  ast_idf.rs  ast_pipeline.rs  ast_types.rs  ast_validate.rs  clone.rs  codegen.rs  config.rs  extract.rs  idf.rs  lib.rs  main.rs  trigram_codegen.rs  types.rs  validate.rs
crates/rskim-search/: Cargo.toml
crates/rskim-search/benches/: ast_index_bench.rs  ast_query.rs  ast_query_bench.rs  linearize_bench.rs
crates/rskim-search/data/: bigram_weights.json
crates/rskim-search/src/: io_util.rs  lib.rs  ngram.rs  ngram_tests.rs  test_corpus.rs  traits.rs  types.rs  validity.rs  validity_tests.rs  weights.rs
crates/rskim-search/tests/: bm25f_scoring.rs  error_conversion.rs  field_classification.rs  file_table_edge_cases.rs  index_builder.rs  index_format.rs  lexical_query.rs  ngram_extraction.rs  serde_field_classification.rs  serialization_roundtrip.rs  temporal_cochange.rs  temporal_git_parser.rs  temporal_scoring.rs  temporal_storage.rs  trait_object_safety.rs  types_edge_cases.rs  wave1_acceptance.rs  wave1_robustness.rs  wave2_acceptance.rs
crates/rskim-tokens/: Cargo.toml
crates/rskim-tokens/benches/: token_count_bench.rs
crates/rskim-tokens/src/: anthropic_offline.rs  counter.rs  encoding.rs  error.rs  heuristic.rs  lib.rs  net.rs
crates/rskim-tokens/tests/: integration.rs  net_integration.rs
crates/rskim/src/: cache.rs  cascade.rs  debug.rs  format.rs  main.rs  multi.rs  process.rs  runner.rs  tokens.rs
crates/rskim/tests/: cli.rs  cli_agents.rs  cli_analytics_expansion.rs  cli_build.rs  cli_cache.rs  cli_completions.rs  cli_diff.rs  cli_directory.rs  cli_discover.rs  cli_e2e_build_parsers.rs  cli_e2e_daemon_passthrough.rs  cli_e2e_db_parsers.rs  cli_e2e_exit_codes.rs  cli_e2e_failure_modes.rs  cli_e2e_guardrail.rs  cli_e2e_infra_parsers.rs  cli_e2e_lint_parsers.rs  cli_e2e_new_parsers.rs  cli_e2e_pkg_parsers.rs  cli_e2e_rewrite.rs  cli_e2e_rewrite_alignment.rs  cli_e2e_stdin_dispatch.rs  cli_e2e_test_parsers.rs  cli_git.rs  cli_glob.rs  cli_guardrail.rs  cli_heatmap.rs  cli_init.rs  cli_integrity.rs  cli_last_lines.rs  cli_learn.rs  cli_line_numbers.rs  cli_markdown.rs  cli_max_lines.rs  cli_multi_file.rs  cli_no_expansion_317.rs  cli_rewrite.rs  cli_search.rs  cli_search_adversarial.rs  cli_search_compose.rs  (+16 more)
crates/skim-cli/: Cargo.toml
crates/skim-cli/src/: main.rs
crates/skim-cli/tests/: cli.rs
crates/skim-core/: Cargo.toml
crates/skim-core/src/: lib.rs  types.rs
crates/skim-core/tests/: integration.rs
crates/skim-wasm/: .gitignore  BUILD.md  Cargo.toml  README.md  package.json
crates/skim-wasm/examples/: basic.html  node-example.js
crates/skim-wasm/src/: index.d.ts  index.js  lib.rs  wrapper.js
(+1318 files in other folders)
