[workspace]
members = [
    "crates/rskim-core",
    "crates/rskim",
]
resolver = "2"

# Shared dependencies across workspace
[workspace.dependencies]
# CRITICAL: Must match tree-sitter-* grammar versions (0.23.x)
# Do NOT upgrade to 0.24+ until all grammars support it (ABI compatibility)
tree-sitter = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
thiserror = "1.0"
anyhow = "1.0"
glob = "0.3"
rayon = "1.10"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tiktoken-rs = "0.7"

[workspace.metadata.dist]
cargo-dist-version = "0.14.0"
ci = ["github"]
installers = ["shell", "npm"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc"
]

# npm package name (unscoped)
[workspace.metadata.dist.npm]
package = "rskim"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
