[workspace]
members = [
    "crates/rskim-core",
    "crates/rskim",
]
resolver = "2"

# Shared dependencies across workspace
[workspace.dependencies]
# Updated to 0.25 for ABI 15 compatibility (required for markdown support)
# tree-sitter 0.25 supports ABI 15, matching the 0.25.x grammar crates
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"  # Keep 0.23 - latest stable (ABI 14)
tree-sitter-javascript = "0.25"  # ABI 15
tree-sitter-python = "0.25"      # ABI 15
tree-sitter-rust = "0.24"        # ABI 14
tree-sitter-go = "0.25"          # ABI 15
tree-sitter-java = "0.23"        # Keep 0.23 - latest stable (ABI 14)
tree-sitter-md = "0.5"           # Requires ABI 15 (tree-sitter 0.25+)
thiserror = "1.0"
anyhow = "1.0"
glob = "0.3"
rayon = "1.10"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tiktoken-rs = "0.7"

[workspace.metadata.dist]
cargo-dist-version = "0.14.0"
ci = ["github"]
installers = ["shell", "npm"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc"
]

# npm package name (unscoped)
[workspace.metadata.dist.npm]
package = "rskim"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
