[package]
name = "rskim-core"
version = "2.2.0"
edition = "2021"
authors = ["Skim Contributors"]
license = "MIT"
description = "Core library for the most intelligent context optimization engine for coding agents"
repository = "https://github.com/dean0x/skim"
readme = "README.md"
keywords = ["ast", "code-analysis", "tree-sitter", "llm"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-md = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-sequel = { workspace = true }
tree-sitter-kotlin-ng = { workspace = true }
tree-sitter-swift = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "transform_bench"
harness = false

[lints.clippy]
# Enforce strict error handling in library code
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"  # Allow during development, warn to remind removal

[lib]
name = "rskim_core"
path = "src/lib.rs"
