[package]
name = "rskim-search"
version = "0.1.0"
edition = "2024"
authors = ["Skim Contributors"]
license = "MIT"
description = "Code search foundation library for skim"
repository = "https://github.com/dean0x/skim"
publish = false
exclude = ["data/"]

[dependencies]
# rskim-core provides Language (for type-safe lang filtering in SearchQuery) and
# SkimError (for SearchError::Core interop). The transitive tree-sitter grammar
# dependencies are acceptable: Wave 1 search layers will require language-aware
# AST parsing, making rskim-core a natural runtime dependency at that point.
rskim-core = { version = "2.10.0", path = "../rskim-core" }
thiserror = { workspace = true }
serde = { workspace = true }
tree-sitter = { workspace = true }

memmap2 = { workspace = true }
crc32fast = { workspace = true }
tempfile = { workspace = true }
gix = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "linearize_bench"
harness = false

[[bench]]
name = "ast_index_bench"
harness = false

[[bench]]
name = "ast_query_bench"
harness = false

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"

[lib]
name = "rskim_search"
path = "src/lib.rs"
