[package]
name = "rskim"
version = "0.9.3"
edition = "2021"
authors = ["Skim Contributors"]
license = "MIT"
description = "Smart code reader - streaming code transformation for AI agents"
repository = "https://github.com/dean0x/skim"
readme = "README.md"

[[bin]]
name = "skim"
path = "src/main.rs"

[dependencies]
rskim-core = { version = "0.9.3", path = "../rskim-core" }
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
glob = { workspace = true }
rayon = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tiktoken-rs = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
serde_json = { workspace = true }
