[package]
name = "rskim"
version = "2.4.0"
edition = "2021"
authors = ["Skim Contributors"]
license = "MIT"
description = "The most intelligent context optimization engine for coding agents. Code-aware AST parsing, command rewriting, output compression."
repository = "https://github.com/dean0x/skim"
readme = "README.md"

[[bin]]
name = "skim"
path = "src/main.rs"

[dependencies]
rskim-core = { version = "2.4.0", path = "../rskim-core" }
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tiktoken-rs = { workspace = true }
thiserror = { workspace = true }
clap_complete = { workspace = true }
strip-ansi-escapes = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
colored = { workspace = true }
# Required: `rskim_core::Parser::parse()` returns `tree_sitter::Tree`, so the
# CLI needs this dep to work with Tree/Node types in the diff rendering pipeline
# (git.rs: is_container_node, find_changed_node_ranges, render_with_unchanged_context).
tree-sitter = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
