[package]
name = "skim-wasm"
version = "0.2.0"
edition = "2021"
authors = ["Skim Contributors"]
license = "MIT"
description = "WASM bindings for Skim - smart code transformation for browsers and Node.js"
repository = "https://github.com/youruser/skim"
keywords = ["wasm", "ast", "code-analysis", "tree-sitter", "llm"]
categories = ["wasm", "parser-implementations", "development-tools"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
skim-core = { path = "../skim-core", version = "0.1.0" }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
console_error_panic_hook = { workspace = true }
wee_alloc = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Optimize for small WASM binary size
opt-level = "s"
lto = true
